<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#3cb879"
    android:touchscreenBlocksFocus="false"
    android:transitionGroup="false"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        android:cacheColorHint="@android:color/transparent"
        android:fadingEdge="none"
        android:persistentDrawingCache="scrolling"
        android:smoothScrollbar="true"
        android:id="@+id/linearLayout">

    	<EditText
    	    android:id="@+id/etUserName"
	       	android:layout_width="match_parent"
	       	android:layout_height="wrap_content"
	       	android:inputType="text"
	        android:hint="@string/etUserName"
            android:drawableStart="@drawable/ic_action_user"
            android:background="@drawable/edittext_bottom_bg"
            android:padding="12sp"
            android:paddingEnd="10sp"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="10sp" />
    	<EditText
    	    android:id="@+id/etEmail"
	       	android:layout_width="fill_parent"
	       	android:layout_height="wrap_content"
	        android:hint="@string/etEmail"
	        android:inputType="textEmailAddress"
            android:background="@drawable/edittext_bottom_bg"
            android:padding="12sp"
	        android:drawableStart="@drawable/ic_action_mail"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    	<EditText
    	    android:id="@+id/etPass"
	       	android:layout_width="fill_parent"
	       	android:layout_height="wrap_content"
	        android:hint="@string/etPass"
	        android:inputType="textPassword"
            android:background="@drawable/edittext_bottom_bg"
            android:padding="12sp"
	        android:drawableStart="@drawable/ic_action_key"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />
    	<EditText
    	    android:id="@+id/etPassagn"
	       	android:layout_width="fill_parent"
	       	android:layout_height="wrap_content"
	        android:hint="@string/etPassagn"
	        android:inputType="textPassword"
            android:background="@drawable/edittext_bottom_bg"
            android:padding="12sp"
            android:drawableStart="@drawable/ic_action_key"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" />

        <RadioGroup
            android:id="@+id/radioSex"
            android:layout_width="fill_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="1dp"
            android:layout_marginRight="1dp"
            android:background="@android:color/background_light"
            android:paddingTop="9dp"
            android:paddingBottom="9dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/etGender"
                android:id="@+id/textView2"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:layout_weight="1" />

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/etmale"
                android:textColorHint="#bbbbbb"
                android:checked="true"
                android:textColor="@android:color/background_dark"
                android:theme="@style/AppBaseTheme"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/etfemale"
                android:textColor="@android:color/background_dark"
                android:theme="@style/AppBaseTheme"
                android:textSize="18sp" />

        </RadioGroup>

    	<EditText
    	    android:id="@+id/etdob"
    	    android:layout_width="fill_parent"
    	    android:layout_height="wrap_content"
    	    android:drawableStart="@drawable/ic_action_calandar"
    	    android:inputType="date"
            android:background="@drawable/edittext_bottom_bg"
            android:padding="12sp"
    	    android:hint="@string/etdob"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|end">

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/btnSignUp"
                android:background="@color/bg_btn_Sign"
                android:textSize="20sp"
                android:padding="10sp"
                android:textColor="@color/white"
                android:clickable="false"
                android:layout_marginEnd="5sp"
                style="@style/ChatAppTheme" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="0sp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@color/bg_btn_Sign"
                android:textSize="20sp"
                android:padding="10sp"
                android:textColor="@color/white"
                android:text="@string/btnCancel"
                android:layout_marginStart="5sp"
                style="@style/ChatAppTheme" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
