<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:theme="@style/ChatAppTheme">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="10sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:cacheColorHint="@android:color/transparent"
            android:fadingEdge="none"
            android:persistentDrawingCache="scrolling"
            android:smoothScrollbar="true">

            <ImageView
                android:layout_width="150sp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView"
                android:layout_gravity="top|center"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logoDesc"
                android:src="@mipmap/ic_launcher_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/title"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@color/bg_btn_Sign"
                android:textAlignment="gravity"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="12dp"
                android:textColor="@color/white"
                android:text="@string/btnSignIn"/>

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:padding="12dp"
                android:textSize="20sp"
                android:text="@string/btnSignUp"
                android:textAlignment="gravity"
                android:gravity="center"
                android:background="@color/bg_btn_Sign"
                android:textColor="@color/white"
                android:layout_marginBottom="40sp" />
            <TextView
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/author_name2"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>