<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:theme="@style/ChatAppTheme">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:cacheColorHint="@android:color/transparent"
            android:fadingEdge="none"
            android:smoothScrollbar="true">

            <ImageView
                android:layout_width="150sp"
                android:layout_height="fill_parent"
                android:id="@+id/imageView"
                android:layout_gravity="top|center"
                android:scaleType="centerCrop"
                android:adjustViewBounds="true"
                android:contentDescription="@string/logoDesc"
                android:src="@mipmap/ic_launcher_logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                android:text="@string/title"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bottom_bg"
                android:padding="12sp"
                android:hint="@string/etEmail"
                android:textColorHint="#000000"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="textEmailAddress"
                android:drawableStart="@drawable/ic_action_mail"
                android:theme="@style/ChatAppTheme" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bottom_bg"
                android:layout_marginTop="10sp"
                android:padding="12sp"
                android:hint="@string/etPass"
                android:textColorHint="#000000"
                android:inputType="textPassword"
                android:drawableStart="@drawable/ic_action_key"
                android:theme="@style/ChatAppTheme" />

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textAlignment="gravity"
                android:gravity="center"
                android:textSize="20sp"
                android:padding="12sp"
                android:background="@color/bg_btn_Sign"
                android:textColor="@color/white"
                android:text="@string/btnSignIn"
                android:theme="@style/ChatAppTheme" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:padding="12sp"
                android:textAlignment="gravity"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@color/bg_btn_Sign"
                android:textColor="@color/white"
                android:text="@string/btnCancel"
                android:theme="@style/ChatAppTheme" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>

