<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.project.communityorganizer.Activities.EventDetailsActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <!--- Event name -->
        <TextView
            android:id="@+id/eventDetailsName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:textColor="#33CC33"
            android:textSize="24sp"/>

        <!-- Event Description -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#EE0000"
            android:text="@string/event_description"
            android:layout_marginBottom="5sp"
            android:id="@+id/textView"
            android:textSize="20sp" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/eventDescription" />

        <!-- Creator name -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#EE0000"
            android:text="@string/created_by"
            android:layout_marginBottom="5sp"
            android:layout_marginTop="15sp"
            android:id="@+id/textView2"
            android:textSize="20sp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#0000EE"
            android:textSize="18sp"
            android:id="@+id/eventCreator" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0000EE"
                android:text="@string/personal_feeling"
                android:id="@+id/textView5" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3sp"
                android:id="@+id/personalFeeling" />
        </LinearLayout>

        <!-- TIME -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#EE0000"
            android:text="@string/time"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="5sp"
            android:id="@+id/textView3"
            android:textSize="20sp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0000EE"
                android:text="@string/starting_at"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="3sp"
                android:id="@+id/startTime" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15sp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#0000EE"
                android:text="@string/ending_at"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4sp"
                android:id="@+id/endTime" />
        </LinearLayout>

        <!-- Location -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#EE0000"
            android:text="@string/location"
            android:layout_marginBottom="5sp"
            android:id="@+id/textView4"
            android:textSize="20sp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp"
            android:id="@+id/location" />

        <!-- Location -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#EE0000"
            android:text="@string/attendees"
            android:layout_marginTop="15sp"
            android:layout_marginBottom="5sp"
            android:id="@+id/textView6"
            android:textSize="20sp"/>
        <View
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3sp"
            android:id="@+id/eventDetailsAttendees" />

    </LinearLayout>
</ScrollView>
