<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="10sp"
    android:layout_marginEnd="10sp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="@android:color/transparent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:fadingEdge="none"
        android:persistentDrawingCache="scrolling"
        android:smoothScrollbar="true"
        android:layout_marginTop="20sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20sp"
            android:layout_marginTop="10sp"
            android:text="@string/event_details"
            android:textColor="#33CC33"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/eteventname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:textColorHint="@android:color/secondary_text_light"
            android:theme="@style/ChatAppTheme"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:hint="@string/eteventname"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="18sp"
            android:inputType="text">
            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/etpersonfeeling"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:hint="@string/etpersonfeelings"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="18sp"
            android:inputType="text"
            android:ems="20"
            android:textColorHint="@android:color/secondary_text_light"
            android:theme="@style/ChatAppTheme"/>

        <EditText
            android:id="@+id/etMessage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10sp"
            android:hint="@string/etMessage"
            android:layout_marginTop="5sp"
            android:textSize="18sp"
            android:inputType="textLongMessage"
            android:gravity="center"
            android:padding="70sp"
            android:ems="20"
            android:textColorHint="@android:color/secondary_text_light"
            android:theme="@style/ChatAppTheme"/>

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:background="@color/bg_btn_Sign"
            android:paddingLeft="25sp"
            android:paddingRight="25sp"
            android:textSize="18sp"
            android:padding="5sp"
            android:text="@string/Create"
            android:textColor="@color/white"
            />
    </LinearLayout>
</ScrollView>